--- a/src/UpdatePackageReferences/UpdatePackageReferences.csproj
+++ b/src/UpdatePackageReferences/UpdatePackageReferences.csproj
@@ -13,6 +13,8 @@
     <PackageIcon>PackageIcon.png</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <VersionPrefix>0.1.0</VersionPrefix>
+	  <PackageProjectUrl>https://github.com/KsWare/UpdatePackageReferences</PackageProjectUrl>
+	  <RepositoryUrl>https://github.com/KsWare/UpdatePackageReferences</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="..\..\LICENSE.txt" Link="Properties\LICENSE.txt" />
